songxueyong-deal test

--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -10,7 +10,7 @@
 #jdbc.password=abc
 
 jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-jdbc.url=jdbc:sqlserver://localhost:1433; DatabaseName=eduplat
-#jdbc.url=jdbc:sqlserver://10.1.0.23:1433; DatabaseName=eduplat
+#jdbc.url=jdbc:sqlserver://localhost:1433; DatabaseName=eduplat
+jdbc.url=jdbc:sqlserver://10.1.0.23:1433; DatabaseName=eduplat
 jdbc.username=sa
 jdbc.password=passw0rd
